Fix problems with Sidebar, Nav and Form settings Spacing

--- a/src/resources/postcss/tribe-common-admin/settings/_sidebar.pcss
+++ b/src/resources/postcss/tribe-common-admin/settings/_sidebar.pcss
@@ -20,7 +20,7 @@
 
 		@media (--viewport-xlarge) {
 			display: flex;
-			margin: var(--tec-spacer-4) auto auto 0;
+			margin: var(--tec-spacer-5) auto auto 0;
 			min-height: fit-content;
 
 			> .tec-settings-form__sidebar-section {
